fixed touchpad natural scrolling

--- a/30-touchpad.conf
+++ b/30-touchpad.conf
@@ -4,7 +4,7 @@ Section "InputClass"
 	Identifier "SynPS/2 Synaptics TouchPad"
 	MatchIsTouchpad "on"
 	MatchDriver "libinput"
-	Option "NatiralScrolling" "true"
+	Option "NaturalScrolling" "true"
 	Option "Tapping" "on"
 	Option "DisableWhileTyping" "on"
 	Option "ClickMethod" "clickfinger"
