fixed touchpad pointer speed

--- a/30-touchpad.conf
+++ b/30-touchpad.conf
@@ -8,4 +8,5 @@ Section "InputClass"
 	Option "Tapping" "on"
 	Option "DisableWhileTyping" "on"
 	Option "ClickMethod" "clickfinger"
+	Option "AccelSpeed" "0.3"
 EndSection
